# bing-desktop

./: README.md  bing-desktop.c  bing-desktop.cabal  bing-desktop.hs
