name:                bing-desktop
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.8

executable bing-desktop
  main-is: bing-desktop.hs
  build-depends:
    base >= 4 && < 5,
    bytestring,
    cmdargs,
    filepath,
    HTTP,
    hxt,
    network
  if !os(windows)
    build-depends: X11
  if os(windows)
    c-sources: bing-desktop.c
    cc-options: -Wall
    cpp-options: -DOS_WINDOWS
  ghc-options: -Wall
